# MachineLearnia-Module-2-Math-matiques-Machine-Learning

./: pyproject.toml
Algèbre Linéaire/: matrices.ipynb  vecteurs.ipynb
