[project]
name = "machinelearnia-module-2-mathématiques-machine-learning"
version = "0.1.0"
description = ""
authors = [
    {name = "WolfgangReip"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "jupyter (>=1.1.1,<2.0.0)",
    "matplotlib (>=3.10.0,<4.0.0)",
    "numpy (>=2.2.3,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
